namespaces/live-1.cloud-platform.service.justice.gov.uk/laa-hmrc-interface-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-hmrc-interface-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "apply-dev"
    cloud-platform.justice.gov.uk/application: "LAA-HMRC Interface Service API"
    cloud-platform.justice.gov.uk/owner: "apply-for-legal-aid: apply@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-hmrc-interface-service-api"
    cloud-platform.justice.gov.uk/team-name: "laa-apply-for-legal-aid"
    cloud-platform.justice.gov.uk/review-after: ""
